<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>unique_id</name>
  <version>1.0.6</version>
  <description>
    ROS Python and C++ interfaces for universally unique identifiers.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/unique_id</url>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>uuid_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>uuid_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

</package>
