<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>uuid_msgs</name>
  <version>1.0.6</version>
  <description>
    ROS messages for universally unique identifiers.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/uuid_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
 <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  </package>
